Make getChannel() in AbstractServer public